# oak

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/hardware/: arduino-nano-33-ble.json  arduino-nano-esp32.json  arduino-portenta-h7.json  coral-dev-board-micro.json  esp32-wroom-32.json  esp32s3.json  jetson-nano-b01.json  kendryte-k210.json  nxp-imxrt1060.json  nxp-imxrt1170-evk.json  raspberrypi-3bplus.json  raspberrypi-4b.json  raspberrypi-pico.json  raspberrypi-zero-2w.json  renesas-ra6m4.json  seeed-xiao-esp32s3-sense.json  sipeed-maix-amigo.json  sony-spresense.json  stm32f407vg.json  stm32h743zi.json
src/oak/advisor/: advisor_profile.py  heuristic_engine.py
src/oak/analysis/: __init__.py  model_analyzer.py  model_profile.py
src/oak/cli/: main.py
src/oak/knowledge_base/: __init__.py  hardware_profile.py  kb_loader.py
