[tool.poetry]
name = "oak-kit"
version = "0.1.0"
description = "A CLI tool to advise on efficient ML model deployment for edge devices."
authors = ["Zelus Lab <zeluslab@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "oak", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["rich"], version = "^0.9.0"}
onnx = "^1.16.0"
onnxruntime = "^1.18.0"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3" 
numpy = "^1.26.4"
loguru = "^0.7.2"
pydantic = "^2.11.5"
rich = "^14.0.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
ruff = "^0.4.8"

[tool.poetry.scripts]
oak = "oak.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"